pairwise refactoring + add a lot of features add documentation